fix text not fitting in display
- remove padding from display text

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ html {
     /* border: var(--purple) solid 0.25rem; */
     width: 100%;
     text-align: right;
-    padding: 1rem;
+    /* padding: 1rem; */
     border-radius: 0 1rem 1rem 0;
     overflow: hidden;
 }
